tests/fixtures/invalid/divmod_str_list.py
# Cannot call divmod() with Str, List[int]
x = divmod("hello", [1, 2, 3])
